# MLOPS-pipeline-on-AWS-using-opensource-tools

./: .gitignore  README.md  cookiecutter.json
.github/workflows/: deploy.yml
my_model/: Dockerfile  Makefile  package-lock.json  pyproject.toml
my_model/data/.dvc/: config
my_model/infra/: Pulumi.dev.yaml  Pulumi.yaml  TraefikRoute.ts  index.ts
my_model/src/my_model/training/: train.py
{{ cookiecutter.project_slug }}/: Makefile  package.json
{{ cookiecutter.project_slug }}/data/: iris.csv.dvc
{{ cookiecutter.project_slug }}/infra/: Pulumi.yaml  index.ts
{{ cookiecutter.project_slug }}/tests/: test_my_model.py
{{cookiecutter.project_slug}}/: .dockerignore  Dockerfile  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: deploy.yml
{{cookiecutter.project_slug}}/infra/: index.ts  package-lock.json  package.json
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/serving/: main.py
